# pyDNEMD

./: .dockerignore  .gitignore  LICENSE  README.md  config_test.yaml  pyproject.toml  workshop.ipynb
.claude/: settings.local.json
.github/workflows/: docker.yml  tests.yml
dnemd/: __init__.py  analysis.py  config.py  dnemd_analysis.py  equilibration.py  equilibrium_analysis.py  gromacs.py  hybrid_topology.py  mutation_setup.py  ne_np_setup.py  trjdump.py  utils.py
dnemd/cli/: analyse_dnemd.py  analyse_equilibrium.py  create_NE_NP_files.py  create_hybrid_topology.py  extract.py  run_equilibrium.py  run_ne_np.py
docker/: Dockerfile
examples/: config.yaml  config_test.yaml
examples/inputs/: QFO_parameters.itp  QFO_restraint.itp  posre.itp  posre_QFO.itp  topol.top
examples/output/perturbed_topology/: perturbed_index.ndx
modules/: analysis.py  dnemd_analysis.py  equilibration.py  equilibrium_analysis.py  gromacs.py  ne_np_setup.py  trjdump.py  utils.py
protein_mutation/hybrid_topology/: prepare_bound.py
scripts/: analyse_dnemd.py  analyse_equilibrium.py  create_NE_NP_files.py  extract.py  run_equilibrium.py
templates/: Prod_RunNE.mdp  Prod_RunNP.mdp  npt1.mdp  npt2.mdp  nvt1.mdp  production.mdp  step1.mdp  step2.mdp  step3.mdp  step4.mdp
templates/ligand_removal/: Prod_RunNE.mdp  em.mdp  nvt2.mdp
templates/protein_mutation/: NP.mdp  em.mdp  npt1.mdp  npt2.mdp  nvt1.mdp  nvt2.mdp  production.mdp  switch_ph1.mdp  switch_ph2.mdp
templates/slurm/: analyse_dnemd.sh  analyse_equilibrium.sh  eq.sh  extract.sh  ne.sh  ne_np_setup.sh  np.sh
tests/: test_analysis.py  test_config.py  test_dnemd_analysis.py  test_dnemd_integration.py  test_equilibrium_integration.py  test_gromacs.py
(+83 files in other folders)
